--- a/css/index.css
+++ b/css/index.css
@@ -222,6 +222,7 @@ body {
   line-height: 1;
   font-family: "IBM Plex Mono", "monospace", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   background-color: #242840;
+  scroll-behavior: smooth;
 }
 @media (max-width: 800px) {
   body {
@@ -409,6 +410,7 @@ main {
 .above-fold-intro-container .af-right-cont img {
   height: 75%;
   border-radius: 50%;
+  z-index: -1;
 }
 .about-container {
   width: 1400px;
